--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header{
     z-index: 100;
 }
 header a{
-    color: black;
+    color: white;
     margin-right: 40px;
     font-weight: bold;
 }
@@ -52,7 +52,7 @@ header a{
     transform: translateX(-50%);
     padding-right: 30%;
     box-sizing: border-box;
-    color: black;
+    color: white;
     /* text-shadow: 0 0px 1px rgb(248, 240, 240); */
 }
 .carousel .list .item .author{
